# firmware-patcher

./: Dockerfile  README.md  app.py  base_patcher.py  cli.py  mi_patcher.py  nb_patcher.py  patcher.py  pyproject.toml  requirements.txt  util.py  wsgi.py  zip.py  zippy.py
app/: __init__.py
app/static/: newstyle.css
app/templates/: disclaimer.html  doc.html  home.html  patcher.html  privacy.html
web/: app.py
web/templates/: home.html
