[tool.poetry]
name = "firmware-patcher"
version = "2.0.0"
description = ""
authors = ["dnandha <daljeet@gmx.net>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.10"
keystone-engine = "^0.9.2"
capstone = "^5.0.1"
flask = "^3.0.3"
fasttea = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
